#---------------------------------------------------
# OpenMM NEB Plugin
#
# Creates OpenMM NEB plugin library, base name=OpenMMNEB.
# Default libraries are shared & optimized. Variants
# are created for static (_static) and debug (_d).
#
# Windows:
#   OpenMMNEB[_d].dll
#   OpenMMNEB[_d].lib
#   OpenMMNEB_static[_d].lib
# Unix:
#   libOpenMMNEB[_d].so
#   libOpenMMNEB_static[_d].a
#----------------------------------------------------

#INCLUDE(Dart)

# ----------------------------------------------------------------------------
SET(CREATE_SERIALIZABLE_OPENMM_NEB FALSE )
# ----------------------------------------------------------------------------

# The source is organized into subdirectories, but we handle them all from
# this CMakeLists file rather than letting CMake visit them as SUBDIRS.
SET(OPENMM_NEB_PLUGIN_SOURCE_SUBDIRS . openmmapi platforms/reference)

SET(OPENMM_NEB_LIBRARY_NAME OpenMMNEB)
SET(SHARED_NEB_TARGET ${OPENMM_NEB_LIBRARY_NAME})
SET(STATIC_NEB_TARGET ${OPENMM_NEB_LIBRARY_NAME}_static)
IF( CREATE_SERIALIZABLE_OPENMM_NEB )
    SET(SHARED_NEB_SERIALIZABLE_TARGET ${OPENMM_NEB_LIBRARY_NAME}_serializable)
ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )

# But on Unix or Cygwin we have to add the suffix manually
IF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)
    SET(SHARED_NEB_TARGET ${SHARED_NEB_TARGET}_d)
    SET(STATIC_NEB_TARGET ${STATIC_NEB_TARGET}_d)
    IF( CREATE_SERIALIZABLE_OPENMM_NEB )
        SET(SHARED_NEB_SERIALIZABLE_TARGET ${SHARED_NEB_SERIALIZABLE_TARGET}_d)
    ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )
ENDIF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)

# These are all the places to search for header files which are
# to be part of the API.
SET(API_NEB_INCLUDE_DIRS) # start empty
FOREACH(subdir ${OPENMM_NEB_PLUGIN_SOURCE_SUBDIRS})
    # append
    SET(API_NEB_INCLUDE_DIRS ${API_NEB_INCLUDE_DIRS}
                                     ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include
                                     ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include/internal)
ENDFOREACH(subdir)

# We'll need both *relative* path names, starting with their API_INCLUDE_DIRS,
# and absolute pathnames.
SET(API_NEB_REL_INCLUDE_FILES)   # start these out empty
SET(API_NEB_ABS_INCLUDE_FILES)

FOREACH(dir ${API_NEB_INCLUDE_DIRS})
    FILE(GLOB fullpaths ${dir}/*.h)	# returns full pathnames
    SET(API_NEB_ABS_INCLUDE_FILES ${API_NEB_ABS_INCLUDE_FILES} ${fullpaths})

    FOREACH(pathname ${fullpaths})
        GET_FILENAME_COMPONENT(filename ${pathname} NAME)
        SET(API_NEB_REL_INCLUDE_FILES ${API_NEB_REL_INCLUDE_FILES} ${dir}/${filename})
    ENDFOREACH(pathname)
ENDFOREACH(dir)

# collect up source files
SET(SOURCE_NEB_FILES) # empty
SET(SOURCE_NEB_INCLUDE_FILES)

FOREACH(subdir ${OPENMM_NEB_PLUGIN_SOURCE_SUBDIRS})
    FILE(GLOB src_files  ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*/*.cpp)
    FILE(GLOB incl_files ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*.h)
    SET(SOURCE_NEB_FILES         ${SOURCE_NEB_FILES}         ${src_files})   #append
    SET(SOURCE_NEB_INCLUDE_FILES ${SOURCE_NEB_INCLUDE_FILES} ${incl_files})

    ## Make sure we find these locally before looking in OpenMM/include if
    ## OpenMM was previously installed there.
    INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include)
ENDFOREACH(subdir)

INCLUDE_DIRECTORIES(BEFORE ${OPENMM_DIR}/platforms/reference/src)
INCLUDE_DIRECTORIES(BEFORE ${OPENMM_DIR}/platforms/reference/src/SimTKReference)
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/platforms/reference/src)
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/platforms/reference/src/SimTKReference)

# ----------------------------------------------------------------------------

# If API_NEB wrappers are being generated, and add them to the build.
#IF(OPENMM_BUILD_C_AND_FORTRAN_WRAPPERS)
#    ADD_SUBDIRECTORY(wrappers)
#    SET(SOURCE_NEB_FILES ${SOURCE_NEB_FILES} wrappers/NEBOpenMMCWrapper.cpp  wrappers/NEBOpenMMFortranWrapper.cpp)
#    SET_SOURCE_FILES_PROPERTIES(wrappers/NEBOpenMMCWrapper.cpp wrappers/NEBOpenMMFortranWrapper.cpp PROPERTIES GENERATED TRUE)
#ENDIF(OPENMM_BUILD_C_AND_FORTRAN_WRAPPERS)

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_LIBRARY(${SHARED_NEB_TARGET} SHARED ${SOURCE_NEB_FILES} ${SOURCE_NEB_INCLUDE_FILES} ${API_NEB_ABS_INCLUDE_FILES})
SET_TARGET_PROPERTIES(${SHARED_NEB_TARGET} PROPERTIES COMPILE_FLAGS "-DOPENMM_BUILDING_SHARED_LIBRARY -DLEPTON_BUILDING_SHARED_LIBRARY")

#IF( CREATE_SERIALIZABLE_OPENMM_NEB )
#    ADD_LIBRARY(${SHARED_NEB_SERIALIZABLE_TARGET} SHARED ${SOURCE_NEB_FILES} ${SOURCE_NEB_INCLUDE_FILES} ${API_NEB_ABS_INCLUDE_FILES})
#    SET_TARGET_PROPERTIES(${SHARED_NEB_SERIALIZABLE_TARGET} PROPERTIES COMPILE_FLAGS "-DOPENMM_BUILDING_SHARED_LIBRARY -DLEPTON_BUILDING_SHARED_LIBRARY -DOPENMM_SERIALIZE")
#    INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../../serialization/include)
#ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )

IF(OPENMM_BUILD_STATIC_LIB)
  ADD_LIBRARY(${STATIC_NEB_TARGET} STATIC ${SOURCE_NEB_FILES} ${SOURCE_NEB_INCLUDE_FILES} ${API_NEB_ABS_INCLUDE_FILES})
  SET_TARGET_PROPERTIES(${STATIC_NEB_TARGET} PROPERTIES COMPILE_FLAGS "-DOPENMM_USE_STATIC_LIBRARIES -DOPENMM_BUILDING_STATIC_LIBRARY -DLEPTON_USE_STATIC_LIBRARIES -DLEPTON_BUILDING_STATIC_LIBRARY")
ENDIF(OPENMM_BUILD_STATIC_LIB)

#IF(OPENMM_BUILD_C_AND_FORTRAN_WRAPPERS)
#    ADD_DEPENDENCIES(${SHARED_NEB_TARGET} NEBApiWrappers)
#    IF( CREATE_SERIALIZABLE_OPENMM_NEB )
#        ADD_DEPENDENCIES(${SHARED_NEB_SERIALIZABLE_TARGET} NEBApiWrappers)
#    ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )
#    IF(OPENMM_BUILD_STATIC_LIB)
#        ADD_DEPENDENCIES(${STATIC_NEB_TARGET} NEBApiWrappers)
#    ENDIF(OPENMM_BUILD_STATIC_LIB)
#ENDIF(OPENMM_BUILD_C_AND_FORTRAN_WRAPPERS)

# ----------------------------------------------------------------------------

# On Linux need to link to libdl
FIND_LIBRARY(DL_LIBRARY dl)
IF(DL_LIBRARY)
  TARGET_LINK_LIBRARIES(${SHARED_NEB_TARGET} ${DL_LIBRARY})
  IF( CREATE_SERIALIZABLE_OPENMM_NEB )
      TARGET_LINK_LIBRARIES(${SHARED_NEB_SERIALIZABLE_TARGET} ${DL_LIBRARY})
  ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )
  IF(OPENMM_BUILD_STATIC_LIB)
    TARGET_LINK_LIBRARIES(${STATIC_NEB_TARGET} ${DL_LIBRARY})
  ENDIF(OPENMM_BUILD_STATIC_LIB)
ENDIF(DL_LIBRARY)

SET( OpenMMLib OpenMM )
# But on Unix or Cygwin we have to add the suffix manually
IF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)
    SET(OpenMMLib ${OpenMMLib}_d)
ENDIF (UNIX AND CMAKE_BUILD_TYPE MATCHES Debug)

TARGET_LINK_LIBRARIES( ${SHARED_NEB_TARGET} ${SHARED_TARGET} )
IF( CREATE_SERIALIZABLE_OPENMM_NEB )
    TARGET_LINK_LIBRARIES( ${SHARED_NEB_SERIALIZABLE_TARGET} ${SHARED_TARGET} )
ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )
IF(OPENMM_BUILD_STATIC_LIB)
    TARGET_LINK_LIBRARIES( ${STATIC_NEB_TARGET} ${STATIC_TARGET} )
ENDIF(OPENMM_BUILD_STATIC_LIB)

ADD_SUBDIRECTORY(platforms/reference/tests)

# Which hardware platforms to build

#SET(OPENMM_BUILD_NEB_PATH)
#SET(OPENMM_BUILD_NEB_CUDA_PATH)
#IF(OPENMM_BUILD_NEB_CUDA_LIB)
#    ADD_SUBDIRECTORY(platforms/cuda)
#    SET(OPENMM_BUILD_NEB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/platforms/cuda)
#    SET(OPENMM_BUILD_NEB_CUDA_PATH ${CMAKE_CURRENT_SOURCE_DIR}/platforms/cuda)
#    SET(OPENMM_NEB_CUDA_SOURCE_SUBDIRS . openmmapi olla platforms/cuda)
#ENDIF(OPENMM_BUILD_NEB_CUDA_LIB)

#SET(OPENMM_BUILD_NEB_OPENCL_LIB ON CACHE BOOL "Build NEB implementation for OpenCL")
#IF(OPENMM_BUILD_NEB_OPENCL_LIB)
#    ADD_SUBDIRECTORY(platforms/opencl)
#ENDIF(OPENMM_BUILD_NEB_OPENCL_LIB)

INSTALL_TARGETS(/lib RUNTIME_DIRECTORY /lib ${SHARED_NEB_TARGET})
IF( CREATE_SERIALIZABLE_OPENMM_NEB )
    INSTALL_TARGETS(/lib/plugins RUNTIME_DIRECTORY /lib/plugins ${SHARED_NEB_SERIALIZABLE_TARGET})
ENDIF( CREATE_SERIALIZABLE_OPENMM_NEB )
IF(OPENMM_BUILD_STATIC_LIB)
  INSTALL_TARGETS(/lib RUNTIME_DIRECTORY /lib ${STATIC_NEB_TARGET})
ENDIF(OPENMM_BUILD_STATIC_LIB)
FILE(GLOB CORE_HEADERS     include/*.h          */include/*.h)
FILE(GLOB TOP_HEADERS      include/openmm/*.h          */include/openmm/*.h)
FILE(GLOB INTERNAL_HEADERS include/openmm/internal/*.h */include/openmm/internal/*.h )
INSTALL_FILES(/include                 FILES ${CORE_HEADERS})
INSTALL_FILES(/include/openmm          FILES ${TOP_HEADERS})
INSTALL_FILES(/include/openmm/internal FILES ${INTERNAL_HEADERS})

#
# Testing
#

ENABLE_TESTING()

IF (EXECUTABLE_OUTPUT_PATH)
  SET (TEST_PATH ${EXECUTABLE_OUTPUT_PATH})
ELSE (EXECUTABLE_OUTPUT_PATH)
  SET (TEST_PATH .)
ENDIF (EXECUTABLE_OUTPUT_PATH)

#IF (OPENMM_BUILD_SERIALIZATION_SUPPORT)
#    ADD_SUBDIRECTORY(serialization)
#ENDIF (OPENMM_BUILD_SERIALIZATION_SUPPORT)

#INCLUDE(ApiDoxygen.cmake)

#ADD_SUBDIRECTORY(tests)
